[DAEF-179] Fix terms-of-use scroll bug on narrow screens

--- a/app/components/layout/TopBarLayout.scss
+++ b/app/components/layout/TopBarLayout.scss
@@ -17,5 +17,4 @@ $topBarHeight: 84px;
 
 .content {
   height: calc(100% - #{$topBarHeight});
-  overflow: auto;
 }
